# Franka-Applications_ROS2-based-drawing-and-object-positioning

./: README.md  formatted_panda_config_params.yaml  fr3_fetch_robot_description.sh  fr3_rebuild_generic.sh  fr3_rebuild_pick_place.sh  isaac_ros2_node.sh  move_group_raw.yaml  my_params.yaml  panda_config_params.yaml
fr3/: PhysicsScene.usd  add_image.py  fr3.urdf  fr3_drawing_sim.usd  fr3_drawing_sim_self.usd  fr3_experiments_sim.usd  pencil_create_script.py  python_alias
fr3/fr3_test/: base.usd  fr3_test_publisher.py  test.usd
fr3_generic_drawing/: CMakeLists.txt  package.xml  this.cpp
fr3_generic_drawing/config/: config.yaml
fr3_generic_drawing/launch/: data.json  draw_image.launch.py  draw_image_vector.launch.py
fr3_generic_drawing/raster_config/: config.yaml
fr3_generic_drawing/raster_config/Log-Diemut/2025-07-30-nameOfDrawing/: config.yaml
fr3_generic_drawing/src/: advanced_draw_image.cpp  draw_image - constraints try.cpp  draw_image - filters.cpp  draw_image.cpp  draw_image_other.py  draw_image_save1.cpp  draw_image_vector copy.cpp  draw_image_vector.cpp  draw_image_vector_hatching_simul.cpp  draw_image_vector_save1.cpp  draw_improve_try1.cpp  repeat_test copy.cpp  repeat_test.cpp
fr3_generic_drawing/vector_config/: config.yaml
fr3_mathematical_drawing/: package.xml
fr3_mathematical_drawing/launch/: draw_curve.launch.py  draw_square.launch.py  draw_star.launch.py
fr3_mathematical_drawing/src/: draw_self.cpp  draw_square.cpp
fr3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
fr3_moveit_config/config/: fr3.ros2_control.xacro  fr3.srdf  fr3_arm_hand.srdf.xacro  fr3_hand.ros2_control.xacro  gripper_moveit_controllers.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
fr3_moveit_config/launch/: moveit.launch.py
fr3_pencil_logger/: package.xml  setup.cfg  setup.py
fr3_pencil_logger/fr3_pencil_logger/: log_path.py
fr3_pick_and_place/: CMakeLists.txt  package.xml
fr3_pick_and_place/launch/: both.launch.py  perception.launch.py  pick_and_place.launch.py
fr3_pick_and_place/src/: perception_node.cpp  pick_place_node - previous.cpp  pick_place_node - previous2.cpp  pick_place_node - repeat back n forth.cpp  pick_place_node.cpp
fr3_test/: package.xml  pyproject.toml  setup.cfg  setup.py
fr3_test/fr3_test/: talker.py
franka_gripper_proxy/: setup.cfg  setup.py
franka_gripper_proxy/franka_gripper_proxy/: proxy_node.py
ground_truth_publisher/: setup.py
ground_truth_publisher/ground_truth_publisher/: ground_truth_node.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/fr3_generic_drawing/lib/fr3_generic_drawing/: draw_image  draw_image_vector  repeat_test
install/fr3_generic_drawing/share/ament_index/resource_index/package_run_dependencies/: fr3_generic_drawing
install/fr3_generic_drawing/share/ament_index/resource_index/parent_prefix_path/: fr3_generic_drawing
install/fr3_generic_drawing/share/fr3_generic_drawing/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fr3_generic_drawing/share/fr3_generic_drawing/cmake/: fr3_generic_drawingConfig-version.cmake  fr3_generic_drawingConfig.cmake
install/fr3_generic_drawing/share/fr3_generic_drawing/environment/: ament_prefix_path.dsv  path.dsv
install/fr3_generic_drawing/share/fr3_generic_drawing/launch/: data.json  draw_image.launch.py  draw_image_vector.launch.py  test.launch.py
log/: latest_build
position_calibration/: package.xml
position_calibration/src/: position_calibration.cpp
src/: fr3_rebuild_generic.sh  franka_hand - save.xacro  move_group_raw.yaml
src/fr3_generic_drawing/launch/: test.launch.py
src/fr3_generic_drawing/raster_config/: config.yaml
src/fr3_generic_drawing/src/: advanced_draw_image.cpp  draw_image - constraints try.cpp  draw_image - filters.cpp  draw_image - no exec delay.cpp  draw_image_vector_hatching_simul.cpp  repeat_test copy.cpp
src/fr3_mathematical_drawing/: CMakeLists.txt
src/fr3_mathematical_drawing/launch/: draw_self.launch.py
src/fr3_mathematical_drawing/src/: draw_curve.cpp  draw_star.cpp
src/fr3_moveit_config/: .setup_assistant
src/fr3_moveit_config/config/: fr3_arm.xacro
src/fr3_pick_and_place/: CMakeLists.txt
src/fr3_pick_and_place/src/: pick_place_node - pick square1.cpp  pick_place_node - repeat on spot.cpp  pick_place_node - template general.cpp  pick_place_node.cpp
src/franka_gripper_proxy/: package.xml  pyproject.toml
src/franka_gripper_proxy/franka_gripper_proxy/: proxy_node.py
src/ground_truth_publisher/: package.xml
src/position_calibration/: CMakeLists.txt
src/position_calibration/launch/: launch_calibration.launch.py
